fix: limit character whit truncate

--- a/components/BackHeader/BackHeader.module.scss
+++ b/components/BackHeader/BackHeader.module.scss
@@ -65,3 +65,12 @@
   display: flex;
   flex-direction: row;
 }
+
+.title {
+  overflow: hidden;
+  padding-right: 1.25rem;
+  text-align: right;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 250px;
+}
